# wake_on_lan_server

./: Cargo.toml  README.md  config.sample.toml
.github/workflows/: release.yml
src/: main.rs
