[package]
name = "wake_on_lan_server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8"
env_logger = "0.11"
log = "0.4"
wol-rs = "1.0"


[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
